; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bearssl/src/symcipher/extr_aes_small_ctrcbc.c_br_aes_small_ctrcbc_encrypt.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bearssl/src/symcipher/extr_aes_small_ctrcbc.c_br_aes_small_ctrcbc_encrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @br_aes_small_ctrcbc_encrypt(i32* %0, i8* %1, i8* %2, i8* %3, i64 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i64 %4, i64* %10, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i8*, i8** %9, align 8
  %14 = load i64, i64* %10, align 8
  %15 = call i32 @br_aes_small_ctrcbc_ctr(i32* %11, i8* %12, i8* %13, i64 %14)
  %16 = load i32*, i32** %6, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = load i64, i64* %10, align 8
  %20 = call i32 @br_aes_small_ctrcbc_mac(i32* %16, i8* %17, i8* %18, i64 %19)
  ret void
}

declare dso_local i32 @br_aes_small_ctrcbc_ctr(i32*, i8*, i8*, i64) #1

declare dso_local i32 @br_aes_small_ctrcbc_mac(i32*, i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
